--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -106,6 +106,29 @@
        </widget>
       </item>
       <item>
+       <widget class="QCommandLinkButton" name="scanlan">
+        <property name="text">
+         <string>Scan local network</string>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/icons/assets/refresh.png</normaloff>:/icons/assets/refresh.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>48</width>
+          <height>48</height>
+         </size>
+        </property>
+        <property name="shortcut">
+         <string>Enter</string>
+        </property>
+        <property name="checkable">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QCommandLinkButton" name="stopForward">
         <property name="enabled">
          <bool>false</bool>
